altered app by shrinking data source and added preprocessed collab-filter results to fit within heroku requirements

--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -36,7 +36,7 @@
    <!-- "{{url_for('static', filename='ayrton_senna_movie_wallpaper_by_bashgfx-d4cm6x6.jpg')}}" -->
             <div class = " card col-md-10">
                 <h4 class = "card-header"> Relationship between Number of Ratings and Mean Rating </h4>
-                <img src = "{{url_for('static',filename = 'mean_ratings_scatter.png')}}"></img>
+                <!-- <img src = "{{url_for('static',filename = 'mean_ratings_scatter.png')}}"></img> -->
 
                 <p>The Scatter Plot above demonstrates a few facts about the data set: </p>
                 <ul>
@@ -56,7 +56,7 @@
                 <div class = " card col-md-10">
                         <h4 class = "card-header"> Summary of the Distribution of the Total Ratings per User </h4>
                         
-                        <img src = "{{url_for('static',filename = 'ratings_histogram.png')}}"> </img>
+                        <!-- <img src = "{{url_for('static',filename = 'ratings_histogram.png')}}"> </img> -->
                         <p>The histogram and other supporting exploratory analysis demonstrated the following facts about the Ratings dataset:</p>
                             <ul>
                                 <li> The majority of users rated less than a 100 movies. Exploratory Data Analysis showed that the mean number of ratings per user is 56.   </li>
