--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
         <div class="container">
                 <div class="row" style="margin-top:25px;">
                 <div class = "col-md-8">
-                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img src="{{ url_for('static',filename ='TZP3_intro.png')}}" class="d-block w-100" alt="intro to project">
@@ -72,7 +72,7 @@
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="sr-only">Next</span>
                     </a>
-                  </div>
+                  </div> -->
                 </div>
 
                 <div class="card col-md-4"  >
