--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -36,7 +36,8 @@
    <!-- "{{url_for('static', filename='ayrton_senna_movie_wallpaper_by_bashgfx-d4cm6x6.jpg')}}" -->
             <div class = " card col-md-10">
                 <h4 class = "card-header"> Relationship between Number of Ratings and Mean Rating </h4>
-                <!-- <img src = "{{url_for('static',filename = 'mean_ratings_scatter.png')}}"></img> -->
+               
+                 <a data-flickr-embed="true"  href="https://www.flickr.com/photos/184010216@N02/48668958712/in/dateposted-public/" title="mean_ratings_scatter"><img src="https://live.staticflickr.com/65535/48668958712_0448bd8363_b.jpg" width="720" height="576" alt="mean_ratings_scatter"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script> 
 
                 <p>The Scatter Plot above demonstrates a few facts about the data set: </p>
                 <ul>
@@ -55,8 +56,8 @@
                 <!-- <div class = "embed-responsive embed-responsive-4by3"> -->
                 <div class = " card col-md-10">
                         <h4 class = "card-header"> Summary of the Distribution of the Total Ratings per User </h4>
+                        <a data-flickr-embed="true"  href="https://www.flickr.com/photos/184010216@N02/48668958687/in/dateposted-public/" title="ratings_histogram"><img src="https://live.staticflickr.com/65535/48668958687_e2dfe19e48_b.jpg" width="720" height="576" alt="ratings_histogram"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
                         
-                        <!-- <img src = "{{url_for('static',filename = 'ratings_histogram.png')}}"> </img> -->
                         <p>The histogram and other supporting exploratory analysis demonstrated the following facts about the Ratings dataset:</p>
                             <ul>
                                 <li> The majority of users rated less than a 100 movies. Exploratory Data Analysis showed that the mean number of ratings per user is 56.   </li>
