--- a/templates/index.html
+++ b/templates/index.html
@@ -49,19 +49,30 @@
         <div class="container">
                 <div class="row" style="margin-top:25px;">
                 <div class = "col-md-8">
-                <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="{{ url_for('static',filename ='TZP3_intro.png')}}" class="d-block w-100" alt="intro to project">
+                          <img src="https://live.staticflickr.com/65535/48668457233_06bd6ce310_b.jpg" class="d-block w-100" alt="TZP3_intro">
+                        <!-- <img src="{{ url_for('static',filename ='TZP3_intro.png')}}" class="d-block w-100" alt="intro to project"> -->
                       </div>
+
                       <div class="carousel-item">
-                        <img src="{{ url_for('static',filename ='TZP3-dataflow2.png')}}" class="d-block w-100" alt="data workflow">
+                        <!-- <img src="{{ url_for('static',filename ='TZP3-dataflow2.png')}}" class="d-block w-100" alt="data workflow"> -->
+                       
+                        <img src="https://live.staticflickr.com/65535/48668803231_f0f2a3f8cb_b.jpg" class="d-block w-100" alt="Data Flow Diagram"></img>
+
                       </div>
+
                       <div class="carousel-item">
-                        <img  src="{{ url_for('static',filename ='TZP3-MLD2.png')}}" class="d-block w-100" alt="machine learning process">
+                        <!-- <img  src="{{ url_for('static',filename ='TZP3-MLD2.png')}}" class="d-block w-100" alt="machine learning process"> -->
+
+                        <img src="https://live.staticflickr.com/65535/48668958602_743f588f9b_b.jpg" class="d-block w-100" alt="System Overview"></img>
+
                       </div>
+
                       <div class="carousel-item">
-                        <img src= "{{ url_for('static',filename ='function_diagram2.png')}}"  class="d-block w-100" alt="function process">
+                        <!-- <img src= "{{ url_for('static',filename ='function_diagram2.png')}}"  class="d-block w-100" alt="function process"> -->
+                        <img src="https://live.staticflickr.com/65535/48668958722_57ee7a4184_b.jpg" class="d-block w-100" alt="function_diagram2"></img>
                       </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -72,7 +83,7 @@
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="sr-only">Next</span>
                     </a>
-                  </div> -->
+                  </div>
                 </div>
 
                 <div class="card col-md-4"  >
